Migliorie + Inizio sistemazione API
