# service/api/follow-user.go
@@ -14,8 +14,7 @@ the user id in the path
 */
 func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 
-	var user User
-	var userToFollow User
+	var idUserToFollow int
 	var err error
 	var token int
 
@@ -31,68 +30,23 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 		return
 	}
 
-	user.IdUser, err = strconv.Atoi(ps.ByName("idUser"))
+	idUserToFollow, err = strconv.Atoi(ps.ByName("idUser"))
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
 	var count int
-	err, count = rt.db.FindUserById(user.IdUser)
+	err, count = rt.db.FindUserById(idUserToFollow)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	// 404 - user (follower) not found, not followed
+	// 404 - user to follow not found, not followed
 	if count <= 0 {
 		w.Header().Set("Content-Type", "application/json")
 		w.WriteHeader(http.StatusNotFound)
-		err = json.NewEncoder(w).Encode(user.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		return
-	}
-
-	err = json.NewDecoder(r.Body).Decode(&userToFollow)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	err, count = rt.db.FindUserById(userToFollow.IdUser)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-	// 404 - user (to follow) not found, not followed
-	if count <= 0 {
-		w.Header().Set("Content-Type", "application/json")
-		w.WriteHeader(http.StatusNotFound)
-		err = json.NewEncoder(w).Encode(userToFollow.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		return
-	}
-
-	// 403 - you cannot follow an user for another user, not followed
-	if token != user.IdUser {
-		w.Header().Set("Content-Type", "application/json")
-		w.WriteHeader(http.StatusForbidden)
-		err = json.NewEncoder(w).Encode(user.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(userToFollow.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(token)
+		err = json.NewEncoder(w).Encode(idUserToFollow)
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 			return
@@ -101,20 +55,10 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 	}
 
 	// 403 - you can't follow yourself, not followed
-	if user.IdUser == userToFollow.IdUser {
+	if token == idUserToFollow {
 		w.Header().Set("Content-Type", "application/json")
 		w.WriteHeader(http.StatusForbidden)
-		err = json.NewEncoder(w).Encode(user.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(userToFollow.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(token)
+		err = json.NewEncoder(w).Encode(idUserToFollow)
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 			return
@@ -122,35 +66,17 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 		return
 	}
 
-	count = 0
-	var count2 int
-	err, count = rt.db.CheckBan(user.IdUser, userToFollow.IdUser)
+	err, count = rt.db.CheckBan(token, idUserToFollow)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
-	err, count2 = rt.db.CheckBan(userToFollow.IdUser, user.IdUser)
-	if err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	}
-
-	// 403 - you have been banned from the user and/or you have banned the user, not followed
-	if count+count2 > 0 {
+	// 403 - you have banned the user, not followed
+	if count > 0 {
 		w.Header().Set("Content-Type", "application/json")
 		w.WriteHeader(http.StatusForbidden)
-		err = json.NewEncoder(w).Encode(user.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(userToFollow.IdUser)
-		if err != nil {
-			w.WriteHeader(http.StatusInternalServerError)
-			return
-		}
-		err = json.NewEncoder(w).Encode(token)
+		err = json.NewEncoder(w).Encode(idUserToFollow)
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
 			return
@@ -158,13 +84,25 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 		return
 	}
 
-	err = rt.db.FollowUser(user.IdUser, userToFollow.IdUser)
+	err, count = rt.db.CheckBan(idUserToFollow, token)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
-	err, userToFollow.IdUser, userToFollow.Username, userToFollow.Biography = rt.db.SelectUser(userToFollow.IdUser)
+	// 403 - you have been banned from the user, not followed
+	if count > 0 {
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(http.StatusForbidden)
+		err = json.NewEncoder(w).Encode(idUserToFollow)
+		if err != nil {
+			w.WriteHeader(http.StatusInternalServerError)
+			return
+		}
+		return
+	}
+
+	err = rt.db.FollowUser(token, idUserToFollow)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
 		return
@@ -173,10 +111,6 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 	// 200 - user succesfully followed
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	err = json.NewEncoder(w).Encode(userToFollow)
-	if err != nil {
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
+	return
 
 }
